<?xml version="1.0" encoding="utf-8"?>
<!-- Sidebar + content frame shared by every page; see BaseActivity#setPage. -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:orientation="horizontal">

    <ScrollView
        android:layout_width="@dimen/sidebar_width"
        android:layout_height="match_parent"
        android:background="@drawable/bg_sidebar"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingTop="10dp"
            android:paddingRight="8dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/nav_home"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_home"
                android:text="@string/nav_home" />

            <TextView
                android:id="@+id/nav_robot"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_robot"
                android:text="@string/nav_robot" />

            <TextView
                android:id="@+id/nav_face"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_face_id"
                android:text="@string/nav_face" />

            <TextView
                android:id="@+id/nav_voice"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_mic"
                android:text="@string/nav_voice" />

            <TextView
                android:id="@+id/nav_object"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_cube"
                android:text="@string/nav_object" />

            <TextView
                android:id="@+id/nav_lidar"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_lidar"
                android:text="@string/nav_lidar" />

            <TextView
                android:id="@+id/nav_remote"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_gamepad"
                android:text="@string/nav_remote" />

            <TextView
                android:id="@+id/nav_settings"
                style="@style/NavRailItem"
                android:drawableTop="@drawable/ic_settings"
                android:text="@string/nav_settings" />
        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/divider" />

    <FrameLayout
        android:id="@+id/page_content"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>
